BAP-17717: Fix align of Use default checkbox (Recent Calls) (#20319)
- fix checkbox

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/forms.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/forms.scss
@@ -22,6 +22,10 @@
     .controls {
         padding-top: 7px;
 
+        .controls {
+            padding-top: 0;
+        }
+
         input:not([type=checkbox]):not([type=radio]),
         textarea,
         .selector,
